svg icon for cover

--- a/gmail/kee/css/app.css
+++ b/gmail/kee/css/app.css
@@ -35,3 +35,8 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+#dropIcon {
+    margin-top: -30%;
+    /* fill: grey !important; */
+}
