got svg css worked out, needed inline

--- a/gmail/kee/css/app.css
+++ b/gmail/kee/css/app.css
@@ -38,5 +38,9 @@ body {
 
 #dropIcon {
     margin-top: -30%;
-    /* fill: grey !important; */
+    width: 224px;
+}
+
+#dropIcon polygon {
+    fill: #b5b5b5 !important;
 }
